--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+certifi==2020.6.20
 click==7.1.2
+cloudinary==1.22.0
 Flask==1.1.2
 Flask-PyMongo==2.3.0
 Flask-SQLAlchemy==2.4.4
@@ -9,5 +11,7 @@ MarkupSafe==1.1.1
 numpy==1.19.2
 pymongo==3.11.0
 python-dotenv==0.14.0
+six==1.15.0
 SQLAlchemy==1.3.19
+urllib3==1.25.11
 Werkzeug==1.0.1
