--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2020.6.20
 click==7.1.2
 cloudinary==1.22.0
 Flask==1.1.2
+Flask-Login==0.5.0
 Flask-PyMongo==2.3.0
 Flask-SQLAlchemy==2.4.4
 gunicorn==20.0.4
@@ -9,6 +10,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 numpy==1.19.2
+passlib==1.7.4
 pymongo==3.11.0
 python-dotenv==0.14.0
 six==1.15.0
